<?xml version="1.0"?>
<package format="2">
  <name>robosub2019</name>
  <version>0.1.0</version>
  <description>The robosub2019 package</description>

  <maintainer email="kirby.overman@gmail.com">Kirby Overman</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!--<build_depend>keyboard</build_depend>-->
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <!--<exec_depend>keyboard</exec_depend>-->
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export></export>
</package>
